--- a/LanguageSchool/Views/Shared/_Layout.cshtml
+++ b/LanguageSchool/Views/Shared/_Layout.cshtml
@@ -21,9 +21,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Kursy", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Materiały", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Testy", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Dane kontaktowe", "Index", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
