--- a/LanguageSchool/Views/Shared/_Layout.cshtml
+++ b/LanguageSchool/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Szkoła językowa Lorem Ipsum</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -17,14 +17,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Szkoła językowa Lorem Ipsum", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Kursy", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Materiały", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Kursy", "Index", "Course")</li>
+                    @*<li>@Html.ActionLink("Materiały", "Index", "Home")</li>
                     <li>@Html.ActionLink("Testy", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Dane kontaktowe", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Dane kontaktowe", "Index", "Home")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -34,7 +34,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Marcin Szymkowski (187821)</p>
         </footer>
     </div>
 
