Dodanie szczegółów kursu

--- a/LanguageSchool/Views/Shared/_Layout.cshtml
+++ b/LanguageSchool/Views/Shared/_Layout.cshtml
@@ -21,10 +21,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @*<li>@Html.ActionLink("Kursy", "Index", "Course")</li>
+@*
+    // TODO: populate according to user role
+    <li>@Html.ActionLink("Kursy", "Index", "Course")</li>
     <li>@Html.ActionLink("Materiały", "Index", "Home")</li>
     <li>@Html.ActionLink("Testy", "Index", "Home")</li>
-    <li>@Html.ActionLink("Dane kontaktowe", "Index", "Home")</li>*@
+    <li>@Html.ActionLink("Dane kontaktowe", "Index", "Home")</li>
+*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
