--- a/LanguageSchool/Views/Course/Details.cshtml
+++ b/LanguageSchool/Views/Course/Details.cshtml
@@ -1,26 +1,16 @@
 ﻿@model LanguageSchool.Models.Course
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Kurs";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
-
 <div>
-    <h4>Course</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.IsDeleted)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsDeleted)
-        </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CreationDate)
+            Data
         </dt>
 
         <dd>
@@ -28,15 +18,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DeletionDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeletionDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
+           Nazwa
         </dt>
 
         <dd>
@@ -44,21 +26,13 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            Opis
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-
+        
     </dl>
 </div>
 <p>
