--- a/LanguageSchool/Views/Course/Index.cshtml
+++ b/LanguageSchool/Views/Course/Index.cshtml
@@ -33,7 +33,7 @@
                 @Html.ActionLink(item.Name, "Details", new { id = item.Id })
             </td>
             <td>
-                @item.Description.Substring(0, item.Description.IndexOf('.'))
+                @item.Description.Substring(0, item.Description.IndexOf('.') + 1)
             </td>
         </tr>
     }
