--- a/LanguageSchool/Views/Course/Details.cshtml
+++ b/LanguageSchool/Views/Course/Details.cshtml
@@ -18,7 +18,7 @@
         </dd>
 
         <dt>
-           Nazwa
+            Nazwa
         </dt>
 
         <dd>
@@ -32,9 +32,20 @@
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
-        
+
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Kursy", "Index")
-</p>
+<hr width="95%"> 
+<div class="container w-100 h-100">
+    <div class="row align-items-center h-100">
+        <div class="col-md-3">
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Course")'">Lista kursów</button>
+        </div>
+        <div class="col-md-6">
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Course")'">Zostaw prośbę o kontakt</button>
+        </div>
+        <div class="col-md-3">
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Course")'">Przykładowe testy</button>
+        </div>
+    </div>
+</div>
