--- a/LanguageSchool/Views/Course/Index.cshtml
+++ b/LanguageSchool/Views/Course/Index.cshtml
@@ -27,7 +27,7 @@
     {
         <tr>
             <td>
-                @item.CreationDate.ToString("yyyy/MM/dd")
+                @item.CreationDate
             </td>
             <td>
                 @Html.ActionLink(item.Name, "Details", new { id = item.Id })
