Zmiany dla składania próśb kontaktowych

--- a/LanguageSchool/Views/Course/Details.cshtml
+++ b/LanguageSchool/Views/Course/Details.cshtml
@@ -35,14 +35,15 @@
 
     </dl>
 </div>
-<hr width="95%"> 
+<hr width="95%">
+
 <div class="container w-100 h-100">
     <div class="row align-items-center h-100">
         <div class="col-md-3">
             <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Course")'">Lista kursów</button>
         </div>
         <div class="col-md-6">
-            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Course")'">Zostaw prośbę o kontakt</button>
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "ContactRequest")'">Zostaw prośbę o kontakt</button>
         </div>
         <div class="col-md-3">
             <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Course")'">Przykładowe testy</button>
