--- a/LanguageSchool/Views/ContactRequest/Create.cshtml
+++ b/LanguageSchool/Views/ContactRequest/Create.cshtml
@@ -5,9 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.CourseId)
 
     <div class="form-horizontal">
         <hr />
