--- a/LanguageSchool/Views/Course/Details.cshtml
+++ b/LanguageSchool/Views/Course/Details.cshtml
@@ -46,7 +46,7 @@
             <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "ContactRequest", new { id = @Model.Id })'">Zostaw prośbę o kontakt</button>
         </div>
         <div class="col-md-3">
-            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Course")'">Przykładowe testy</button>
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "EntryTest", new { id = @Model.Id })'">Przykładowe testy</button>
         </div>
     </div>
 </div>
