Wyciągnięcie wspólnej części do częściowego widoku

--- a/LanguageSchool/Views/ContactRequest/Create.cshtml
+++ b/LanguageSchool/Views/ContactRequest/Create.cshtml
@@ -76,18 +76,7 @@
     </div>
 }
 
-<hr width="95%">
-
-<div class="container w-100 h-100">
-    <div class="row align-items-center h-100">
-        <div class="col-md-3">
-            <div>
-                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Course")'">Lista kursów</button>
-            </div>
-        </div>
-        <div class="col-md-9">
-        </div>
-</div>
+@Html.Partial("_BackToCourses")
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
