--- a/LanguageSchool/Views/EntryTest/Index.cshtml
+++ b/LanguageSchool/Views/EntryTest/Index.cshtml
@@ -4,9 +4,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -32,7 +29,7 @@
             @Html.DisplayFor(modelItem => item.CreationDate)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
+            @Html.ActionLink(item.Name, "TakeTest", new { id = item.Id })
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Comment)
@@ -43,11 +40,6 @@
         <td>
             @Html.DisplayFor(modelItem => item.Points)
         </td>
-        @*<td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>*@
     </tr>
 }
 
