--- a/LanguageSchool/Views/EntryTest/TakeTest.cshtml
+++ b/LanguageSchool/Views/EntryTest/TakeTest.cshtml
@@ -44,12 +44,12 @@
 <div class="container w-100 h-100">
     <div class="row align-items-center h-100">
         <div class="col-md-3">
-            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Course")'">Lista testów</button>
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "EntryTest", new { id = @Model.CourseId })'">Lista testów</button>
         </div>
         <div class="col-md-6">
         </div>
         <div class="col-md-3">
-            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "EntryTest", new { id = @Model.Id })'">Oceń</button>
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "EntryTest", new { id = @Model.CourseId })'">Oceń</button>
         </div>
     </div>
 </div>
