Poprawki przed oddaniem

--- a/LanguageSchool/Views/EntryTest/TakeTest.cshtml
+++ b/LanguageSchool/Views/EntryTest/TakeTest.cshtml
@@ -49,7 +49,7 @@
         <div class="col-md-6">
         </div>
         <div class="col-md-3">
-            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "EntryTest", new { id = @Model.CourseId })'">Oceń</button>
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "ContactRequest", new { id = @Model.CourseId })'">Oceń</button>
         </div>
     </div>
 </div>
