--- a/LanguageSchool/Views/Home/Index.cshtml
+++ b/LanguageSchool/Views/Home/Index.cshtml
@@ -6,35 +6,23 @@
 
     <div class="row">
         <div class="jumbotron">
-            <h1>ASP.NET</h1>
-            <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-            <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+            <h2>Witaj w szkole!</h2>
+            <p class="lead">Szkoła językowa BeLingua to profesjonalni pracownicy, ciekawe zajęcia, przyjazna atmosfera oraz przystępne ceny. Sprawdź naszą ofertę i przejdź przez jeden z przykładowych kursów by przekonać się czemu jesteśmy wiodącym wyborem</p>
         </div>
     </div>
 
     <div class="row">
-        @*<div class="jumbotron col-md-4">
-                <h2>Getting started</h2>
-                <p>
-                    ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                    enables a clean separation of concerns and gives you full control over markup
-                    for enjoyable, agile development.
-                </p>
-                <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-            </div>
-            <div class="col-md-1">
-            </div>*@
         <div class="jumbotron col-md-5">
-            <h2>Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+            <h3>Zapoznaj się z naszą ofertą</h3>
+            <p><font size="3">Przez cały rok prowadzimy nabór do kursów językowych, o różnych stopniach zaawansowania. Wybierz odpowiedni dla siebie</font></p>
+            <p><button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Course")'">Lista kursów</button></p>
         </div>
         <div class="col-md-2">
         </div>
         <div class="jumbotron col-md-5">
-            <h2>Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+            <h3>Pozostaw prośbę o kontakt</h3>
+            <p ><font size="3">Wybierz interesujący Cię kurs i pozostaw swoje dane, a jeden z naszych pracowników skontaktuje się z Tobą w odpowiadającym Ci terminie</font></p>
+            <p><button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Course")'">Prośba o kontakt</button></p>
         </div>
     </div>
 
