--- a/LanguageSchool/Views/Home/Index.cshtml
+++ b/LanguageSchool/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<body background="~/images/Background.jpg">
+<body background="~/images/Background_home.jpg">
 
     <div class="row">
         <div class="jumbotron">
@@ -26,5 +26,22 @@
         </div>
     </div>
 
-    <div class="navbar navbar-fixed-bottom " style="background-color: darkorange" width="100%" />
+    <div class="navbar navbar-fixed-bottom" style="background-color: darkorange">
+        <div class="col-md-8">
+        </div>
+        <div class="col-md-4">
+            <ul class="list-unstyled">
+                <li>
+                    <p>
+                        <font color="white">Łódź, ul. Piotrkowska 33a m. 4, 95-414</font>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <font color="white">404-112-461, Be.Lingua@gmail.com</font>
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
