--- a/LanguageSchool/Views/Course/Index.cshtml
+++ b/LanguageSchool/Views/Course/Index.cshtml
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>View</title>
 </head>
-<body>
+<body background="~/images/Background_courses.jpg">
     <table class="table">
         <tr>
             <th></th>
@@ -22,22 +22,22 @@
                 Opis
             </th>
         </tr>
-    
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @item.CreationDate
-            </td>
-            <td>
-                @Html.ActionLink(item.Name, "Details", new { id = item.Id })
-            </td>
-            <td>
-                @item.ShortDescription
-            </td>
-        </tr>
-    }
-    
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @item.CreationDate
+                </td>
+                <td>
+                    @Html.ActionLink(item.Name, "Details", new { id = item.Id })
+                </td>
+                <td>
+                    @item.ShortDescription
+                </td>
+            </tr>
+        }
+
     </table>
 </body>
 </html>
