--- a/LanguageSchool/Views/Home/Index.cshtml
+++ b/LanguageSchool/Views/Home/Index.cshtml
@@ -26,22 +26,24 @@
         </div>
     </div>
 
-    <div class="navbar navbar-fixed-bottom" style="background-color: darkorange">
+    <div class="navbar navbar-fixed-bottom " style="background-color: darkorange">
         <div class="col-md-8">
         </div>
         <div class="col-md-4">
-            <ul class="list-unstyled">
-                <li>
-                    <p>
-                        <font color="white">Łódź, ul. Piotrkowska 33a m. 4, 95-414</font>
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        <font color="white">404-112-461, Be.Lingua@gmail.com</font>
-                    </p>
-                </li>
-            </ul>
+            <font color="white">
+                <ul class="list-unstyled">
+                    <li>
+                        <p>
+                            <span class="glyphicon glyphicon-home"> Łódź, Piotrkowska 33/2, 95-414</span>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <span class="glyphicon glyphicon-phone"/> 404-112-461 <span class="glyphicon glyphicon-envelope"/> Be.Lingua@gmail.com
+                        </p>
+                    </li>
+                </ul>
+            </font>
         </div>
     </div>
 </body>
