--- a/LanguageSchool/Views/Shared/_BackToCourses.cshtml
+++ b/LanguageSchool/Views/Shared/_BackToCourses.cshtml
@@ -1,6 +1,4 @@
-﻿<hr width="95%">
-
-<div class="container w-100 h-100">
+﻿<div class="container w-100 h-100">
     <div class="row align-items-center h-100">
         <div class="col-md-3">
             <div>
