--- a/LanguageSchool/Views/ContactRequest/Create.cshtml
+++ b/LanguageSchool/Views/ContactRequest/Create.cshtml
@@ -7,75 +7,77 @@
 
 
 <body background="~/images/Background_contact.jpg">
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.CourseId)
+    <div class="jumbotron">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            @Html.HiddenFor(model => model.CourseId)
 
-        <div class="form-horizontal">
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-horizontal">
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-            <div class="form-group">
-                <div class="control-label col-md-2">
-                    <strong>Numer telefonu</strong>
-                </div>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "np. 140-633-900" } })
-                    @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="control-label col-md-2">
-                    <strong>Adres email</strong>
-                </div>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.EmailAdress, new { htmlAttributes = new { @class = "form-control", placeholder = "np. imie.nazwisko@poczta.pl" } })
-                    @Html.ValidationMessageFor(model => model.EmailAdress, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="control-label col-md-2">
-                    <strong>Komentarz</strong>
-                </div>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
-                </div>
-            </div>
-
-            @*<div class="form-group">
-                    @Html.LabelFor(model => model.CourseId, "CourseId", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="form-group">
+                    <div class="control-label col-md-2">
+                        <strong>Numer telefonu</strong>
+                    </div>
                     <div class="col-md-10">
-                        @Html.DropDownList("CourseId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.CourseId, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "np. 140-633-900" } })
+                        @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.EntryTestId, "EntryTestId", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("EntryTestId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.EntryTestId, "", new { @class = "text-danger" })
+                    <div class="control-label col-md-2">
+                        <strong>Adres email</strong>
                     </div>
-                </div>*@
-
-            @*<div class="form-group">
-                    @Html.LabelFor(model => model.Points, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Points, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Points, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.EmailAdress, new { htmlAttributes = new { @class = "form-control", placeholder = "np. imie.nazwisko@poczta.pl" } })
+                        @Html.ValidationMessageFor(model => model.EmailAdress, "", new { @class = "text-danger" })
                     </div>
-                </div>*@
+                </div>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Utwórz" class="btn btn-default" />
+                <div class="form-group">
+                    <div class="control-label col-md-2">
+                        <strong>Komentarz</strong>
+                    </div>
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                </div>
+
+                @*<div class="form-group">
+                        @Html.LabelFor(model => model.CourseId, "CourseId", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownList("CourseId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.CourseId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.EntryTestId, "EntryTestId", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownList("EntryTestId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.EntryTestId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>*@
+
+                @*<div class="form-group">
+                        @Html.LabelFor(model => model.Points, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Points, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Points, "", new { @class = "text-danger" })
+                        </div>
+                    </div>*@
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Utwórz" class="btn btn-default" />
+                    </div>
                 </div>
             </div>
-        </div>
-    }
+        }
+    </div>
 
     @Html.Partial("_BackToCourses")
 
