Posprzątanie po zmianach

--- a/LanguageSchool/Views/EntryTest/TakeTest.cshtml
+++ b/LanguageSchool/Views/EntryTest/TakeTest.cshtml
@@ -27,7 +27,7 @@
                     {
                         <div class="form-group">
                             <div class="col-md-2">
-                                @answer.Answer - @answer.Id ( @question.Id )
+                                @answer.Answer
                             </div>
                             <div class="col-md-10">
                                 @Html.RadioButton(question.Id.ToString(), answer.IsMarked)
