--- a/LanguageSchool/Views/Shared/_LoginPartial.cshtml
+++ b/LanguageSchool/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Zaloguj się", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", style = "color:white" })</li>
+        <li>@Html.ActionLink("Zaloguj się", "Login", "User", routeValues: null, htmlAttributes: new { id = "loginLink", style = "color:white" })</li>
         @*<li>@Html.ActionLink("Wyloguj się", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>*@
     </ul>
 }
