Poprawka dla odnośników w menu

--- a/LanguageSchool/Views/Shared/_MenuItems.cshtml
+++ b/LanguageSchool/Views/Shared/_MenuItems.cshtml
@@ -4,13 +4,15 @@
 {
     var menus = (List<MenuViewModel>)Session["Menus"];
 
-    foreach (MenuViewModel m in menus)
-    {
-        <li>@Html.ActionLink(m.ShownName, m.ActionName, m.ControllerName, new { @style = "color:white" })</li>
-    }
+    <ul class="nav navbar-nav">  @*style="background-color: red;"*@
+        @foreach (MenuViewModel m in menus)
+        {
+            <li>@Html.ActionLink(m.ShownName, m.ActionName, m.ControllerName, htmlAttributes: new { style = "color:white" })</li>
+        }
+    </ul>
 }
 
-<li>@Html.ActionLink("Kursy", "Index", "Course", new { @style = "color:white" })</li>
-@*<li>@Html.ActionLink("Materiały", "Index", "Home", new { @style = "color:white" })</li>
+@*<li>@Html.ActionLink("Kursy", "Index", "Course", new { @style = "color:white" })</li>
+    <li>@Html.ActionLink("Materiały", "Index", "Home", new { @style = "color:white" })</li>
     <li>@Html.ActionLink("Testy", "Index", "Home", new { @style = "color:white" })</li>
     <li>@Html.ActionLink("Dane kontaktowe", "Index", "Home", new { @style = "color:white" })</li>*@
