Drobne poprawki w layoucie

--- a/LanguageSchool/Views/Shared/_LoginPartial.cshtml
+++ b/LanguageSchool/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
         <li>
             @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", style = "color:white" })
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()"><font color="white">Wyloguj</font></a></li>
     </ul>
     }
 }
