--- a/LanguageSchool/Views/Account/Login.cshtml
+++ b/LanguageSchool/Views/Account/Login.cshtml
@@ -8,8 +8,6 @@
                 @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                     @Html.AntiForgeryToken()
-                    <h4>Use a local account to log in.</h4>
-                    <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
                         @Html.LabelFor(m => m.Login, new { @class = "col-md-2 control-label" })
@@ -35,7 +33,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Log in" class="btn btn-default" />
+                            <input type="submit" value="Zaloguj" class="btn btn-default" />
                         </div>
                     </div>
                 }
