--- a/LanguageSchool/Views/EntryTest/TakeTest.cshtml
+++ b/LanguageSchool/Views/EntryTest/TakeTest.cshtml
@@ -59,7 +59,7 @@
             <div class="col-md-6">
             </div>
             <div class="col-md-3">
-                <input type="submit" value="Oceń" class="btn btn-default" />
+                <input type="submit" value="Oceń" class="btn btn-block btn-primary" />
             </div>
         </div>
     </div>
