--- a/LanguageSchool/Views/ContactRequest/Create.cshtml
+++ b/LanguageSchool/Views/ContactRequest/Create.cshtml
@@ -37,36 +37,21 @@
 
             <div class="form-group">
                 <div class="control-label col-md-2">
+                    <strong>Godziny kontaktu</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.PreferredHours, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="control-label col-md-2">
                     <strong>Komentarz</strong>
                 </div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
-
-            @*<div class="form-group">
-                    @Html.LabelFor(model => model.CourseId, "CourseId", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("CourseId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.CourseId, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.EntryTestId, "EntryTestId", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("EntryTestId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.EntryTestId, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
-
-            @*<div class="form-group">
-                    @Html.LabelFor(model => model.Points, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Points, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Points, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
