--- a/LanguageSchool/Views/Course/Index.cshtml
+++ b/LanguageSchool/Views/Course/Index.cshtml
@@ -15,12 +15,17 @@
     <div class="jumbotron">
         <table class="table">
             <tr>
-                <th></th>
                 <th>
-                    Kurs
+                    @Html.ActionLink("Rozpoczęcie", "Index", new { sortColumn = "startDate", sortOrder = ViewBag.sortOrder, page = ViewBag.page })
+                </th>
+                <th>
+                    @Html.ActionLink("Kurs", "Index", new { sortColumn = "name", sortOrder = ViewBag.sortOrder, page = ViewBag.page })
                 </th>
                 <th>
                     Opis
+                </th>
+                <th>
+                    @Html.ActionLink("Liczba godzin", "Index", new { sortColumn = "numberOfHours", sortOrder = ViewBag.sortOrder, page = ViewBag.page })
                 </th>
             </tr>
 
@@ -28,13 +33,16 @@
             {
                 <tr>
                     <td>
-                        @item.CreationDate
+                        @item.StartDate
                     </td>
                     <td>
                         @Html.ActionLink(item.Name, "Details", new { id = item.Id })
                     </td>
                     <td>
                         @item.ShortDescription
+                    </td>
+                    <td>
+                        @item.NumberOfHours
                     </td>
                 </tr>
             }
