--- a/LanguageSchool/Views/Course/Index.cshtml
+++ b/LanguageSchool/Views/Course/Index.cshtml
@@ -16,16 +16,19 @@
         <table class="table">
             <tr>
                 <th>
-                    @Html.ActionLink("Rozpoczęcie", "Index", new { sortColumn = "startDate", sortOrder = ViewBag.sortOrder, page = ViewBag.page })
+                    @Html.ActionLink("Rozpoczęcie", "Index", new { sortColumn = "startDate", sortOrder = ViewBag.sortOrder, page = ViewBag.page },
+                         new { style = "text-decoration:none" } )
                 </th>
                 <th>
-                    @Html.ActionLink("Kurs", "Index", new { sortColumn = "name", sortOrder = ViewBag.sortOrder, page = ViewBag.page })
+                    @Html.ActionLink("Kurs", "Index", new { sortColumn = "name", sortOrder = ViewBag.sortOrder, page = ViewBag.page },
+                         new { style = "text-decoration:none" })
                 </th>
                 <th>
                     Opis
                 </th>
                 <th>
-                    @Html.ActionLink("Liczba godzin", "Index", new { sortColumn = "numberOfHours", sortOrder = ViewBag.sortOrder, page = ViewBag.page })
+                    @Html.ActionLink("Liczba godzin", "Index", new { sortColumn = "numberOfHours", sortOrder = ViewBag.sortOrder, page = ViewBag.page },
+                         new { style = "text-decoration:none" })
                 </th>
             </tr>
 
